--- a/web/offline.html
+++ b/web/offline.html
@@ -1,28 +1,31 @@
 <!doctype html>
 <html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Dream Defenders">
+    <meta name="apple-mobile-web-app-title" content="DD">
+    <meta name="theme-color" content="#fde135">
+    <meta name="msapplication-navbutton-color" content="#fde135">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="msapplication-starturl" content="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="manifest" href="/app/themes/sage/app-manifest.json">
+    <link rel="apple-touch-icon" href="/app/themes/sage/dist/images/icons-192.png">
+    <title>Dream Defenders | A new vision for safety away from prisons.</title>
+    <meta name='robots' content='noindex,nofollow' />
+    <link rel="canonical" href="/" />
+    <link rel="stylesheet" href="/app/themes/sage/dist/styles/compiled.css">
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="Dream Defenders">
-  <meta name="apple-mobile-web-app-title" content="DD">
-  <meta name="theme-color" content="#fde135">
-  <meta name="msapplication-navbutton-color" content="#fde135">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="msapplication-starturl" content="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="manifest" href="/app/themes/sage/app-manifest.json">
-  <link rel="apple-touch-icon" href="/app/themes/sage/dist/images/icons-192.png">
-  <title>Dream Defenders | We are young, powerful people organizing towards a new vision for safety away from prisons.</title>
-  <meta name='robots' content='noindex,nofollow' />
-  <link rel="canonical" href="/" />
-  <link rel="stylesheet" href="/app/themes/sage/dist/styles/compiled.css?id=bb7192e935f1cdac9d6e">
-</head>
-
-<body class="home page wp-embed-responsive bg-black">
-  <div class="container">
-    <h1 class="text-white font-display">Temporarily offline. We'll be back ASAP.</h1>
-  </div>
-</body>
+  <body class="bg-black">
+    <div class="container">
+      <h1 class="text-white font-display text-3xl text-center">
+        Temporarily offline.
+      </h1>
+      <span class="text-white text-2xl">We'll be back ASAP.</span>
+    </div>
+  </body>
+</html>
