--- a/web/offline.html
+++ b/web/offline.html
@@ -22,10 +22,10 @@
 
   <body class="bg-black">
     <div class="container">
-      <h1 class="text-white font-display text-3xl text-center">
+      <h1 class="text-3xl text-center text-white font-display">
         Temporarily offline.
       </h1>
-      <span class="text-white text-2xl">We'll be back ASAP.</span>
+      <span class="text-2xl text-white">We'll be back ASAP.</span>
     </div>
   </body>
 </html>
